# textevolve

./: .gitignore  ASSET_SYSTEM_README.md  DOCKER_SETUP.md  LICENSE.md  MATH_script.py  README.md  agent_system.py  asset_dataset_loader.py  asset_manager.py  capability_debug.py  clients.py  dataset_loader.py  debug_capability.py  debug_script.py  enhance_system_improver.py  enhanced_agent_system.py  learnings.txt  llm_call_library.py  llm_example_library.py  llm_techniques.py  prompt_templates.py  providers.py  pyproject.toml  reset_system.py  run_arc_example.py  run_asset_system.py  run_script.py  sandbox.py  script_flow_graph.py  system_improver.py  system_improver.py.bak  system_prompt.md  test_context_formatting.py  test_customer_service.py  test_sandbox.py  test_script_template.py  test_tool_usage.py  validate_script.py  verify_setup.py
archive/: iteration_0.json  iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  iteration_27.json  iteration_28.json  iteration_29.json  iteration_3.json  iteration_30.json  iteration_31.json  iteration_32.json  iteration_33.json  iteration_34.json  iteration_35.json  iteration_36.json  iteration_37.json  iteration_38.json  iteration_39.json  iteration_4.json  iteration_40.json  iteration_41.json  iteration_42.json  iteration_43.json  (+50 more)
(+203 files in other folders)
